--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -61,7 +61,7 @@
   margin-left: 5px;
 
   .options {
-    margin-top: 15px;
+    margin-top: 10px;
     display: none;
     background-color: var(--main-color);
     border-radius: 5px;
